removed empty pages and satin topmenu, for now

--- a/content/menu.html
+++ b/content/menu.html
@@ -1,5 +1,5 @@
 <a class="button" href="index.html">Home</a>
-<a class="button" href="overview.html">Overview</a>  
+<!-- <a class="button" href="overview.html">Overview</a>  -->
 <a class="button" href="publications.html">Publications</a>
 <a class="button" href="talks.html">Talks</a>
 <a class="button" href="people.html">People</a>
@@ -15,16 +15,16 @@
 
 <p class="projectclass">Middleware</p>
 <a class="button" href="javagat.html">JavaGAT</a>
-<a class="button" href="javasaga.html">JavaSAGA</a> 
+<!-- <a class="button" href="javasaga.html">JavaSAGA</a> -->
 <a class="button" href="zorilla.html">Zorilla</a>
 
 <p class="projectclass">Communication Libraries</p>
 <a class="button" href="ibis.html">Ibis</a>
-<a class="button" href="smartsockets.html">Smartsockets</a>
+<!-- <a class="button" href="smartsockets.html">Smartsockets</a> -->
 
 <p class="projectclass">Applications</p>
 <a class="button" href="sat4satin.html">SAT4Satin</a>
-<a class="button" href="nqueens.html">NQueens</a>
+<!-- <a class="button" href="nqueens.html">NQueens</a> -->
 
 <a class=logo href="http://www.vl-e.nl"><img src="images/vl-e.png" alt="Vl-e logo" ></a>
 
