Added a news Item for the turorial

--- a/content/news.html
+++ b/content/news.html
@@ -1,4 +1,8 @@
 <p class=newsitem>
+April 2007: There will be an Ibis tutorial on the 27th of April at the Vrije Iniversiteit, Amsterdam. See <a href="http://www.cs.vu.nl/~kielmann/asci-a14/ibis-day.php">this page</a> for more information.
+</p>
+
+<p class=newsitem>
 November 2006: JavaGAT 1.6 is available now. For more details, please go to the <a href="https://gforge.cs.vu.nl/projects/javagat">JavaGAT project page</a>.
 </p>
 
