- more zorilla content - topmenus everywhere - split publications and talks into sub-projects

--- a/content/index.html
+++ b/content/index.html
@@ -7,17 +7,13 @@
 
 <p>See the various sections of this website for documentation on the Ibis subprojects, downloads, users of Ibis and other information.</p>
 
-<p>
-<img src="images/ibis-project-overview-smaller.jpg" height="623" width="600" usemap="#designmap" alt="ibis project overview" >
-<map name="designmap">
-<area href="programming_models.html" shape="rect" coords="65,16,227,171" alt="programming models">
-<area href="javagat.html" shape="rect" coords="297,15,460,145" alt="JavaGAT">
-<area href="das.html" shape="rect" coords="148,210,341,403" alt="das">
-<area href="zorilla.html" shape="rect" coords="366,210,571,402" alt="zorilla">
-<area href="users.html" shape="rect" coords="376,466,559,607" alt="users">
-</map>
-</p>
+<p>For the all-important question "How do I pronounce Ibis?", please <a href="rob.mp3">listen to</a> the recording of one of the project members explaining this in detail</p>
 
+<p>Download a demo video, showing a galaxy simulation written with Satin (one of the Ibis programming models) and deployed with the JavaGAT <a href=downloads/barnes-demo-divx.avi>here</a></p>
+
+<p>
+<img src="images/ibis-project-overview-smaller.jpg" alt="ibis project overview" >
+</p>
 
 
 <!--
