--- a/content/javagat.html
+++ b/content/javagat.html
@@ -1,3 +1,12 @@
+<table class=topmenu><tr>
+<td class=topmenu><a class=topmenu href="http://gforge.cs.vu.nl/projects/javagat/">Download JavaGAT</a></td>
+<td class=topmenu><a class=topmenu href="publications.html#javagat">JavaGAT Publications</a></td>
+<td class=topmenu><a class=topmenu href="talks.html#javagat">JavaGAT Talks</a></td>
+<td class=topmenu><a class=topmenu href="mailto:rob@cs.vu.nl">Contact</a></td>
+<td class=topmenu><a class=topmenu href="mailto:gat-devel@cct.lsu.edu">Mailinglist</a></td>
+</tr>
+</table>
+
 <h2>JavaGAT</h2>
 
 <p>The Java Grid Application Toolkit (JavaGAT) offers a set of
