--- a/content/menu.html
+++ b/content/menu.html
@@ -1,11 +1,9 @@
 <a class="button" href="index.html">Home</a>
-<!-- <a class="button" href="overview.html">Overview</a>  -->
 <a class="button" href="publications.html">Publications</a>
 <a class="button" href="talks.html">Talks</a>
 <a class="button" href="people.html">People</a>
 <a class="button" href="users.html">Projects Using Ibis</a>
 <a class="button" href="das.html">Information for DAS users</a>
-<a class="button" href="downloads.html">Downloads</a> 
 
 <p class="projectclass">Programming Models</p>
 <a class="button" href="satin.html">Satin</a>
@@ -20,7 +18,7 @@
 
 <p class="projectclass">Communication Libraries</p>
 <a class="button" href="ibis.html">Ibis</a>
-<!-- <a class="button" href="smartsockets.html">Smartsockets</a> -->
+<a class="button" href="smartsockets.html">Smartsockets</a> 
 
 <p class="projectclass">Applications</p>
 <a class="button" href="sat4satin.html">SAT4Satin</a>
