--- a/content/publications.html
+++ b/content/publications.html
@@ -1,5 +1,36 @@
 <h2>Publications</h2>
 
+<a name=satin><h3>Satin</h3></a>
 <?php
-include ("generated_publications.html");
+include ("generated_publications_satin.html");
+?>
+
+<a name=mpj><h3>MPJ</h3></a>
+<?php
+include ("generated_publications_mpj.html");
+?>
+
+<a name=gmi><h3>GMI</h3></a>
+<?php
+include ("generated_publications_gmi.html");
+?>
+
+<a name=zorilla><h3>Zorilla</h3></a>
+<?php
+include ("generated_publications_zorilla.html");
+?>
+
+<a name=ibis><h3>Ibis Communication Library</h3></a>
+<?php
+include ("generated_publications_ibis.html");
+?>
+
+<a name=smartsockets><h3>Smartsockets</h3><a>
+<?php
+include ("generated_publications_smartsockets.html");
+?>
+
+<a name=other><h3>Other</h3></a>
+<?php
+include ("generated_publications_other.html");
 ?>
