--- a/content/satin.html
+++ b/content/satin.html
@@ -1,14 +1,10 @@
-<!--
 <table class=topmenu><tr>
-<td class=topmenu><a class=topmenu href="downloads.html">Downloads Satin</a></td>
-<td class=topmenu><a class=topmenu href="downloads.html">Projects Using Satin</a></td>
-<td class=topmenu><a class=topmenu href="downloads.html">Satin Publications</a></td>
-<td class=topmenu><a class=topmenu href="downloads.html">Satin Talks</a></td>
-<td class=topmenu><a class=topmenu href="downloads.html">Contact</a></td>
+<td class=topmenu><a class=topmenu href="http://gforge.cs.vu.nl/projects/ibis/">Download Satin</a></td>
+<td class=topmenu><a class=topmenu href="publications.html#satin">Satin Publications</a></td>
+<td class=topmenu><a class=topmenu href="talks.html#satin">Satin Talks</a></td>
+<td class=topmenu><a class=topmenu href="mailto:rob@cs.vu.nl">Contact</a></td>
 </tr>
 </table>
-
--->
 
 <h2>Satin</h2>
 <p>We have extended the Java language with Cilk
