--- a/content/smartsockets.html
+++ b/content/smartsockets.html
@@ -1,1 +1,11 @@
+<table class=topmenu><tr>
+<td class=topmenu><a class=topmenu href="http://gforge.cs.vu.nl/projects/ibis/">Download Smartsockets</a></td>
+<td class=topmenu><a class=topmenu href="publications.html#smartsockets">Smartsockets Publications</a></td>
+<td class=topmenu><a class=topmenu href="talks.html#smartsockets">Smartsockets Talks</a></td>
+<td class=topmenu><a class=topmenu href="mailto:jason@cs.vu.nl">Contact</a></td>
+</tr>
+</table>
+
 <h2>Smartsockets</h2>
+
+This page still empty. :(
