--- a/content/talks.html
+++ b/content/talks.html
@@ -1,5 +1,21 @@
-<h2>Talks</h2>
+<h2>Talks and Tutorials</h2>
 
+<a name=other><?php
+include ("generated_talks_other.html");
+?></a>
+
+<a name=satin><h3>Satin</h3></a>
 <?php
-include ("generated_talks.html");
+include ("generated_talks_satin.html");
 ?>
+
+<a name=zorilla><h3>Zorilla</h3></a>
+<?php
+include ("generated_talks_zorilla.html");
+?>
+
+<a name=ibis><h3>Ibis Communication Library</h3></a>
+<?php
+include ("generated_talks_ibis.html");
+?>
+
