--- a/content/ibis.html
+++ b/content/ibis.html
@@ -1,3 +1,11 @@
+<table class=topmenu><tr>
+<td class=topmenu><a class=topmenu href="http://gforge.cs.vu.nl/projects/ibis/">Download Ibis</a></td>
+<td class=topmenu><a class=topmenu href="publications.html#ibis">Ibis Publications</a></td>
+<td class=topmenu><a class=topmenu href="talks.html#ibis">Ibis Talks</a></td>
+<td class=topmenu><a class=topmenu href="mailto:ibis-devel@cs.vu.nl">Contact</a></td>
+</tr>
+</table>
+
 <h2>The Ibis Communication Library</h2>
 
 <p>The Ibis communications library is specifically designed for usage in a grid environment. It has a number of properties which help to achieve its goal of providing programmers with an easy to use, reliable grid communication infrastructure</p>
