--- a/content/mpj.html
+++ b/content/mpj.html
@@ -1,3 +1,11 @@
+<table class=topmenu><tr>
+<td class=topmenu><a class=topmenu href="http://gforge.cs.vu.nl/projects/ibis/">Download MPJ/Ibis</a></td>
+<td class=topmenu><a class=topmenu href="publications.html#mpj">MPJ/Ibis Publications</a></td>
+<td class=topmenu><a class=topmenu href="talks.html#mpj">MPJ/Ibis Talks</a></td>
+<td class=topmenu><a class=topmenu href="mailto:ibis-devel@cs.vu.nl">Contact</a></td>
+</tr>
+</table>
+
 <h2>Mpj: MPI for Java</h2>
 
 <p>The MPJ programming interface has been defined by the Java Grande forum to provide MPI-like message passing for Java applications.  MPJ/Ibis is a pure-Java implementation of this interface, and delivers high-performance communication, while being deployable on various platforms, from Myrinet-based clusters to grids. See <a href="publications.html#MPJ">a paper by Markus Bornemann et. al.</a> for more details.</p>
