--- a/content/news.html
+++ b/content/news.html
@@ -8,28 +8,22 @@ November 2006: JavaGAT 1.6 is available now. For more details, please go to the 
 
 <p class=newsitem>
 November 2006: An Ibis tutorial will given at the 3nd Grid Plugtest, which will take place from the 27th of November to the 1st of December 2006 in ETSI Headquarters 
-(Sophia-Antipolis, France). The preliminary schedule can be found <a href="tutorial2006.html">here</a>.
+(Sophia-Antipolis, France).
 </p>
 
 <p class=newsitem>
-September 2006: Ibis 1.4 is available now. See the <a href="downloads.html">Downloads</a> section.
-</p>
-
-<p class=newsitem>
-August 2006: An Ibis demo video is available now. <a href="downloads.html">Watch or download it here</a>.
+September 2006: Ibis 1.4 is available now.
 </p>
 
 <p class=newsitem>
 August 2006: 3rd Grid Plugtests and CoreGrid Conference in November! See
 <a href="http://www.etsi.org/Plugtests/Upcoming/GRID2006/GRID2006.htm">here</a>
-or
-<a href="http://www.etsi.org/Plugtests/Upcoming/GRID2006/GRIDConferenceTutorials2006.htm">here</a>.
 </p>
 
 <p class=newsitem>
-February 2006: Ibis 1.3 is available now. See the <a href="downloads.html">Downloads</a> section.
+February 2006: Ibis 1.3 is available now.
 </p>
 
 <p class=newsitem>
-December 2005: Ibis 1.2.1 is available now. See the <a href="downloads.html">Downloads</a> section.
+December 2005: Ibis 1.2.1 is available now.
 </p>
