obfuscated mailto links using javascript

--- a/content/ibis.html
+++ b/content/ibis.html
@@ -4,7 +4,7 @@
 <td class=topmenu><a class=topmenu href="http://www.cs.vu.nl/ibis/progman/index.html">Manual</a></td>
 <td class=topmenu><a class=topmenu href="publications.html#ibis">Ibis Publications</a></td>
 <td class=topmenu><a class=topmenu href="talks.html#ibis">Ibis Talks</a></td>
-<td class=topmenu><a class=topmenu href="mailto:ibis-devel@cs.vu.nl">Contact</a></td>
+<td class=topmenu><script type="text/javascript"> generate_contact_address( "ibis-devel", "cs.vu.nl" ); </script></td>
 </tr>
 </table>
 
