--- a/content/javagat.html
+++ b/content/javagat.html
@@ -2,7 +2,7 @@
 <td class=topmenu><a class=topmenu href="http://gforge.cs.vu.nl/projects/javagat/">Download JavaGAT</a></td>
 <td class=topmenu><a class=topmenu href="publications.html#javagat">JavaGAT Publications</a></td>
 <td class=topmenu><a class=topmenu href="talks.html#javagat">JavaGAT Talks</a></td>
-<td class=topmenu><a class=topmenu href="mailto:rob@cs.vu.nl">Contact</a></td>
+<td class=topmenu><script type="text/javascript"> generate_contact_address( "rob", "cs.vu.nl" ); </script></td>
 <td class=topmenu><a class=topmenu href="mailto:gat-devel@cct.lsu.edu">Mailinglist</a></td>
 </tr>
 </table>
