--- a/content/smartsockets.html
+++ b/content/smartsockets.html
@@ -2,7 +2,7 @@
 <td class=topmenu><a class=topmenu href="http://gforge.cs.vu.nl/projects/ibis/">Download Smartsockets</a></td>
 <td class=topmenu><a class=topmenu href="publications.html#smartsockets">Smartsockets Publications</a></td>
 <td class=topmenu><a class=topmenu href="talks.html#smartsockets">Smartsockets Talks</a></td>
-<td class=topmenu><a class=topmenu href="mailto:jason@cs.vu.nl">Contact</a></td>
+<td class=topmenu><script type="text/javascript"> generate_contact_address( "jason", "cs.vu.nl" ); </script></td>
 </tr>
 </table>
 
