--- a/content/gmi.html
+++ b/content/gmi.html
@@ -2,7 +2,8 @@
 <td class=topmenu><a class=topmenu href="http://gforge.cs.vu.nl/projects/ibis/">Download GMI</a></td>
 <td class=topmenu><a class=topmenu href="publications.html#gmi">GMI Publications</a></td>
 <td class=topmenu><a class=topmenu href="talks.html#gmi">GMI Talks</a></td>
-<td class=topmenu><a class=topmenu href="mailto:jason@cs.vu.nl">Contact</a></td>
+<td class=topmenu><script type="text/javascript"> generate_contact_address( "jason", "cs.vu.nl" ); </script></td>
+
 </tr>
 </table>
 
