--- a/content/rmi.html
+++ b/content/rmi.html
@@ -2,7 +2,7 @@
 <td class=topmenu><a class=topmenu href="http://gforge.cs.vu.nl/projects/ibis/">Download Ibis</a></td>
 <td class=topmenu><a class=topmenu href="publications.html#ibis">Ibis Publications</a></td>
 <td class=topmenu><a class=topmenu href="talks.html#ibis">Ibis Talks</a></td>
-<td class=topmenu><a class=topmenu href="mailto:ibis-devel@cs.vu.nl">Contact</a></td>
+<td class=topmenu><script type="text/javascript"> generate_contact_address( "ibis-devel", "cs.vu.nl" ); </script></td>
 </tr>
 </table>
 
