--- a/content/satin.html
+++ b/content/satin.html
@@ -2,7 +2,7 @@
 <td class=topmenu><a class=topmenu href="http://gforge.cs.vu.nl/projects/ibis/">Download Satin</a></td>
 <td class=topmenu><a class=topmenu href="publications.html#satin">Satin Publications</a></td>
 <td class=topmenu><a class=topmenu href="talks.html#satin">Satin Talks</a></td>
-<td class=topmenu><a class=topmenu href="mailto:rob@cs.vu.nl">Contact</a></td>
+<td class=topmenu><script type="text/javascript"> generate_contact_address( "rob", "cs.vu.nl" ); </script></td>
 </tr>
 </table>
 
