--- a/content/zorilla.html
+++ b/content/zorilla.html
@@ -2,7 +2,7 @@
 <td class=topmenu><a class=topmenu href="http://gforge.cs.vu.nl/projects/zorilla/">Download Zorilla</a></td>
 <td class=topmenu><a class=topmenu href="publications.html#zorilla">Zorilla Publications</a></td>
 <td class=topmenu><a class=topmenu href="talks.html#zorilla">Zorilla Talks</a></td>
-<td class=topmenu><a class=topmenu href="mailto:ndrost@cs.vu.nl">Contact</a></td>
+<td class=topmenu><script type="text/javascript"> generate_contact_address( "niels", "cs.vu.nl" ); </script></td>
 </tr>
 </table>
 
