--- a/content/javagat.html
+++ b/content/javagat.html
@@ -336,7 +336,7 @@ If you want your name or project in this list, please send an email to rob@cs.vu
 </tr>
 
 <tr>
-<td><a href="http://www.ac.upc.edu">Universitat Politècnica de Catalunya (UPC)<a></td>
+<td><a href="http://www.ac.upc.edu">Universitat Politecnica de Catalunya (UPC)<a></td>
 <td>unkown</td>
 </tr>
 
