--- a/content/news.html
+++ b/content/news.html
@@ -1,4 +1,8 @@
 <p class=newsitem>
+August 2007: There will be live JavaGAT and Ibis demos at Supercomputing'07 in Reno, USA. See <a href="http://sc07.supercomputing.org/">this page</a> for more information. We also have a <a href="publications/nieuwpoort_sc_2007.pdf">technical paper</a> about the JavaGAT in the conference.
+</p>
+
+<p class=newsitem>
 April 2007: There will be an Ibis tutorial on the 27th of April at the Vrije Iniversiteit, Amsterdam. See <a href="http://www.cs.vu.nl/~kielmann/asci-a14/ibis-day.php">this page</a> for more information.
 </p>
 
