--- a/content/publications.html
+++ b/content/publications.html
@@ -1,5 +1,10 @@
 <h2>Publications</h2>
 
+<a name=javagat><h3>JavaGAT</h3></a>
+<?php
+include ("generated_publications_javagat.html");
+?>
+
 <a name=satin><h3>Satin</h3></a>
 <?php
 include ("generated_publications_satin.html");
