added generated pages, javadoc and programmers manual to website

--- a/content/index.html
+++ b/content/index.html
@@ -7,7 +7,9 @@
 
 <p>See the various sections of this website for documentation on the Ibis subprojects, downloads, users of Ibis and other information.</p>
 
-<p>For the all-important question "How do I pronounce Ibis?", please <a href="rob.mp3">listen to</a> the recording of one of the project members explaining this in detail</p>
+<p>For the all-important question "How do I pronounce Ibis?", please <a
+href="downloads/rob.mp3">listen to</a> the recording of one of the
+project members explaining this in detail</p>
 
 <p>Download a demo video, showing a galaxy simulation written with Satin (one of the Ibis programming models) and deployed with the JavaGAT <a href=downloads/barnes-demo-divx.avi>here</a></p>
 
