--- a/content/menu.html
+++ b/content/menu.html
@@ -3,7 +3,6 @@
 <a class="button" href="talks.html">Talks</a>
 <a class="button" href="people.html">People</a>
 <a class="button" href="users.html">Projects Using Ibis</a>
-<a class="button" href="das.html">Information for DAS users</a>
 
 <p class="projectclass">Programming Models</p>
 <a class="button" href="satin.html">Satin</a>
@@ -17,7 +16,7 @@
 <a class="button" href="zorilla.html">Zorilla</a>
 
 <p class="projectclass">Communication Libraries</p>
-<a class="button" href="ibis.html">Ibis</a>
+<a class="button" href="ipl.html">Ibis</a>
 <a class="button" href="smartsockets.html">Smartsockets</a> 
 
 <p class="projectclass">Applications</p>
