--- a/content/news.html
+++ b/content/news.html
@@ -3,7 +3,7 @@ August 2007: There will be live JavaGAT and Ibis demos at Supercomputing'07 in R
 </p>
 
 <p class=newsitem>
-April 2007: There will be an Ibis tutorial on the 27th of April at the Vrije Iniversiteit, Amsterdam. See <a href="http://www.cs.vu.nl/~kielmann/asci-a14/ibis-day.php">this page</a> for more information.
+April 2007: There will be an Ibis tutorial on the 27th of April at the Vrije Universiteit, Amsterdam. See <a href="http://www.cs.vu.nl/~kielmann/asci-a14/ibis-day.php">this page</a> for more information.
 </p>
 
 <p class=newsitem>
