added talks of the tutorial

--- a/generated_talks_ibis.html
+++ b/generated_talks_ibis.html
@@ -8,6 +8,19 @@
 <dl>
 
 <dt>
+<a name="MaassenIbis07">&nbsp;</a>
+</dt>
+<dd>
+Jason Maassen.
+ Ibis tutorial and hands-on session.
+ Vrije Universiteit, Amsterdam, April 2007.
+[&nbsp;<a href="generated_talks_ibis_bib.html#MaassenIbis07">bib</a>&nbsp;| 
+<a href="talks/ibis-tutorial-2007.pdf">.pdf</a>&nbsp;]
+
+</dd>
+
+
+<dt>
 <a name="MaassenIbis05">&nbsp;</a>
 </dt>
 <dd>
