--- a/generated_talks_ibis_bib.html
+++ b/generated_talks_ibis_bib.html
@@ -1,4 +1,16 @@
-<h1>ibis.bib</h1><a name="MaassenIbis05"></a><pre>
+<h1>ibis.bib</h1><a name="MaassenIbis07"></a><pre>
+@INPROCEEDINGS{<a href="generated_talks_ibis.html#MaassenIbis07">MaassenIbis07</a>,
+  author = {Jason Maassen},
+  title = {Ibis Tutorial and Hands-on Session},
+  booktitle = {},
+  year = 2007,
+  month = {April},
+  address = {Vrije Universiteit, Amsterdam},
+  http = {talks/ibis-tutorial-2007.pdf}
+}
+</pre>
+
+<a name="MaassenIbis05"></a><pre>
 @INPROCEEDINGS{<a href="generated_talks_ibis.html#MaassenIbis05">MaassenIbis05</a>,
   author = {Jason Maassen and Rob V. van Nieuwpoort},
   title = {Ibis Tutorial and Hands-on Session},
