--- a/content/talks.html
+++ b/content/talks.html
@@ -1,12 +1,23 @@
-<h2>Talks and Tutorials</h2>
+<h2>Talks</h2>
 
-<a name=other><?php
-include ("generated_talks_other.html");
-?></a>
+<a name=javagat><h3>JavaGAT</h3></a>
+<?php
+include ("generated_talks_javagat.html");
+?>
 
 <a name=satin><h3>Satin</h3></a>
 <?php
 include ("generated_talks_satin.html");
+?>
+
+<a name=mpj><h3>MPJ</h3></a>
+<?php
+include ("generated_talks_mpj.html");
+?>
+
+<a name=gmi><h3>GMI</h3></a>
+<?php
+include ("generated_talks_gmi.html");
 ?>
 
 <a name=zorilla><h3>Zorilla</h3></a>
@@ -19,3 +30,12 @@ include ("generated_talks_zorilla.html");
 include ("generated_talks_ibis.html");
 ?>
 
+<a name=smartsockets><h3>Smartsockets</h3><a>
+<?php
+include ("generated_talks_smartsockets.html");
+?>
+
+<a name=other><h3>Other</h3></a>
+<?php
+include ("generated_talks_other.html");
+?>
