--- a/generated_talks_mpj.html
+++ b/generated_talks_mpj.html
@@ -5,4 +5,17 @@
      /usr/bin/bibtex2html -nokeys -nofooter -nodoc -nf ppt .ppt -dl -d -r -q -o generated_talks_mpj talks/mpj.bib  -->
 
 
-<dl></dl>
+<dl>
+
+<dt>
+<a name="NieuwpoortMPJ07">&nbsp;</a>
+</dt>
+<dd>
+Rob&nbsp;V. can Nieuwpoort.
+ Mpj tutorial.
+ Vrije Universiteit, Amsterdam, April 2007.
+[&nbsp;<a href="generated_talks_mpj_bib.html#NieuwpoortMPJ07">bib</a>&nbsp;| 
+<a href="talks/ibis-tutorial-2007-mpj.pdf">.pdf</a>&nbsp;]
+
+</dd>
+</dl>
