--- a/generated_talks_satin.html
+++ b/generated_talks_satin.html
@@ -8,6 +8,19 @@
 <dl>
 
 <dt>
+<a name="NiewpoortSatin07">&nbsp;</a>
+</dt>
+<dd>
+Rob&nbsp;V. van Nieuwpoort.
+ Satin tutorial.
+ Vrije Universiteit, Amsterdam, April 2007.
+[&nbsp;<a href="generated_talks_satin_bib.html#NiewpoortSatin07">bib</a>&nbsp;| 
+<a href="talks/ibis-tutorial-2007-satin.pdf">.pdf</a>&nbsp;]
+
+</dd>
+
+
+<dt>
 <a name="WrzesinskaEuroSys05">&nbsp;</a>
 </dt>
 <dd>
