--- a/generated_talks_satin_bib.html
+++ b/generated_talks_satin_bib.html
@@ -1,4 +1,16 @@
-<h1>satin.bib</h1><a name="NieuwpoortAGRIDM03"></a><pre>
+<h1>satin.bib</h1><a name="NiewpoortSatin07"></a><pre>
+@INPROCEEDINGS{<a href="generated_talks_satin.html#NiewpoortSatin07">NiewpoortSatin07</a>,
+  author = {Rob V. van Nieuwpoort},
+  title = {Satin Tutorial},
+  booktitle = {},
+  year = 2007,
+  month = {April},
+  address = {Vrije Universiteit, Amsterdam},
+  http = {talks/ibis-tutorial-2007-satin.pdf}
+}
+</pre>
+
+<a name="NieuwpoortAGRIDM03"></a><pre>
 @INPROCEEDINGS{<a href="generated_talks_satin.html#NieuwpoortAGRIDM03">NieuwpoortAGRIDM03</a>,
   author = {Rob V. van Nieuwpoort and Jason Maassen and Rutger Hofman and Thilo Kielmann and Henri E. Bal},
   title = {Satin: Simple and Efficient Java-based Grid Programming},
