--- a/content/sat4satin.html
+++ b/content/sat4satin.html
@@ -11,28 +11,28 @@ inherently difficult. Satisfiability solvers are commonly used in industry
 to verify the correctness of complex digital circuits, such as out-of-order
 execution units in modern processors.</p>
 
-<p>We constructed an efficient SAT solver "SAT4SATIN" based on the existing
-sequential solver <a href="http://www.sat4j.org">SAT4J</a>, which in turn is a
-reimplementation in Java of <a href="http://www.cs.chalmers.se/Cs/Research/FormalMethods/MiniSat/">MiniSAT</a>.
-Both MiniSAT and SAT4J are "industry strength" solvers, that are competitive
-with other state-of-the-art implementations. These solvers use a backtracking
-search that speculatively assigns boolean values to variables until the problem
-is satisfied or a conflict is encountered. Upon a conflict the solver
-backtracks.</p>
+<p>We constructed an SAT solver "SAT4SATIN" based on the existing
+sequential solver <a href="http://www.sat4j.org">SAT4J</a>, which in
+turn is a reimplementation in Java of <a
+href="http://www.cs.chalmers.se/Cs/Research/FormalMethods/MiniSat/">MiniSAT</a>.
+Both MiniSAT and SAT4J are "industry strength" solvers, that are
+competitive with other state-of-the-art implementations. These solvers
+use a backtracking search that speculatively assigns boolean values to
+variables until the problem is satisfied or a conflict is encountered.
+Upon a conflict the solver backtracks.</p>
 
-<p>Parallelizing SAT4J with Satin was relatively easy. For each speculative
-assignment a task is spawned so that alternative assignments are evaluated
-in parallel.
-A challenging issue in parallelizing SAT solvers arises from the
-fact that it is hard to predict how much execution time is needed to
-solve a spawned subproblem. For some subproblems, the costs of
-spawning may even exceed the execution time. Therefore, in our
-implementation we use the same approach taken in the 
-<a href="http://vgrads.rice.edu/research/applications/gridsat">GridSAT</a> solver: each task
-first performs a certain amount of sequential search before splitting
-up the remaining search problem. This guarantees that only hard
-tasks will be split.</p>
+<p>Parallelizing SAT4J with Satin was relatively easy. For each
+speculative assignment a task is spawned so that alternative assignments
+are evaluated in parallel.  A challenging issue in parallelizing SAT
+solvers arises from the fact that it is hard to predict how much
+execution time is needed to solve a spawned subproblem. For some
+subproblems, the costs of spawning may even exceed the execution time.
+Therefore, in our implementation we use the same approach taken in the
+<a href="http://vgrads.rice.edu/research/applications/gridsat">GridSAT</a>
+solver: each task first performs a certain amount of sequential search
+before splitting up the remaining search problem. This guarantees that
+only hard tasks will be split.</p>
 
-<p>Other aspects that are implemented conveniently and efficiently
+<p>Other aspects that are implemented conveniently
 using a recent shared objects extension include global learning and
 global search bound checking.</p>
