--- a/content/index.html
+++ b/content/index.html
@@ -9,9 +9,9 @@
 
 <p>For the all-important question "How do I pronounce Ibis?", please <a
 href="downloads/rob.mp3">listen to</a> the recording of one of the
-project members explaining this in detail</p>
+project members explaining this in detail.</p>
 
-<p>Download a demo video, showing a galaxy simulation written with Satin (one of the Ibis programming models) and deployed with the JavaGAT <a href=downloads/barnes-demo-xvid.avi>here</a></p>
+<p>Download a demo video, showing a galaxy simulation written with Satin (one of the Ibis programming models) and deployed with the JavaGAT <a href=downloads/barnes-demo-xvid.avi>here</a>.</p>
 
 <p>
 <img src="images/ibis-project-overview-smaller.jpg" alt="ibis project overview" >
