moved gosia to former members :)

--- a/content/people.html
+++ b/content/people.html
@@ -51,7 +51,6 @@
 
   <div>
     <a href="http://www.cs.vu.nl/~mathijs/"><img src= "images/people/mathijs.jpg" alt="Mathijs den Burger"></a>
-    <a href="http://www.cs.vu.nl/~gosia/"><img src="images/people/gosia.jpg" alt= "Malgorzata Wrzesinska"></a> 
     <a href="http://www.cs.vu.nl/~ndrost/"><img src= "images/people/niels.jpg" alt="Niels Drost"></a>
 
   </div>
@@ -64,12 +63,7 @@
 		    </script>:<br>
     Working on Multicasting in Grid environments.</li>
 
-    <li><a href="http://www.cs.vu.nl/~gosia/">Malgorzata Wrzesinska</a> 
-    	<script type="text/javascript">
-	            generate_address( "gosia", "cs.vu.nl" );
-		    </script>:<br>
-    Worked on Ibis RMI, Satin fault tolerance, and Satin shared objects.</li>
-
+    
     <li><a href="http://www.cs.vu.nl/~ndrost/">Niels Drost</a>
     	<script type="text/javascript">
 	            generate_address( "ndrost", "cs.vu.nl" );
@@ -118,6 +112,8 @@
     <a href="http://www.cs.vu.nl/~reeuwijk"><img src= "images/people/kees_v_reeuwijk.jpg" 
     	alt="Kees van Reeuwijk"></a> 
     <a href= "http://www.cs.vu.nl/~rutger"><img src="images/people/rutger.jpg" alt="Rutger Hofman"></a>
+    <a href="http://www.cs.vu.nl/~gosia/"><img src="images/people/gosia.jpg" alt= "Malgorzata Wrzesinska"></a> 
+
   </div>
   From left to right:
 
@@ -159,4 +155,10 @@
 	            generate_address( "rutger", "cs.vu.nl" );
 		    </script>:<br>
     Worked on NetIbis, messagePassing Ibis, CCJ, and many other things.</li>
-  </ul>
+
+  </<li><a href="http://www.cs.vu.nl/~gosia/">Malgorzata Wrzesinska</a> 
+    	<script type="text/javascript">
+	            generate_address( "gosia", "cs.vu.nl" );
+		    </script>:<br>
+    Worked on Ibis RMI, Satin fault tolerance, and Satin shared objects.</li>
+ul>
