--- a/content/people.html
+++ b/content/people.html
@@ -45,6 +45,8 @@
     Worked on Ibis design, Ibis TCP implementation, efficient serialization, RMI and Satin
     (parallel Divide-and-Conquer).
     </li>
+
+
   </ul>
 
   <h4>Ph.D. students</h4>
@@ -57,6 +59,7 @@
   From left to right:
 
   <ul>
+
     <li><a href="http://www.cs.vu.nl/~mathijs/">Mathijs den Burger</a>
     	<script type="text/javascript">
 	            generate_address( "mathijs", "cs.vu.nl" );
@@ -69,7 +72,6 @@
 	            generate_address( "ndrost", "cs.vu.nl" );
 		    </script>:<br>
     Wrote the NIO Ibis implementation and is currently looking into Peer-to-Peer stuff.</li>
-
 
 
   </ul>
@@ -156,9 +158,10 @@
 		    </script>:<br>
     Worked on NetIbis, messagePassing Ibis, CCJ, and many other things.</li>
 
-  </<li><a href="http://www.cs.vu.nl/~gosia/">Malgorzata Wrzesinska</a> 
+  <li><a href="http://www.cs.vu.nl/~gosia/">Malgorzata Wrzesinska</a> 
     	<script type="text/javascript">
 	            generate_address( "gosia", "cs.vu.nl" );
 		    </script>:<br>
     Worked on Ibis RMI, Satin fault tolerance, and Satin shared objects.</li>
-ul>
+
+</ul>
