updated news updated people updated ibis design

--- a/content/news.html
+++ b/content/news.html
@@ -1,4 +1,10 @@
 <p class=newsitem>
+September 2006: Ibis 2.0 is available now! This marks the first version
+of Ibis to change the IPL in four years. For now, only the IPL and TCP
+based imlementations are available.
+</p>
+
+<p class=newsitem>
 November 2007: There will be live JavaGAT and Ibis demos at Supercomputing'07 in Reno, USA. See <a href="http://sc07.supercomputing.org/">this page</a> for more information. We also have a <a href="publications/nieuwpoort_sc_2007.pdf">technical paper</a> about the JavaGAT in the conference.
 </p>
 
