--- a/content/people.html
+++ b/content/people.html
@@ -69,7 +69,7 @@
     
     <li><a href="http://www.cs.vu.nl/~ndrost/">Niels Drost</a>
     	<script type="text/javascript">
-	            generate_address( "ndrost", "cs.vu.nl" );
+	            generate_address( "niels", "cs.vu.nl" );
 		    </script>:<br>
     Wrote the NIO Ibis implementation and is currently looking into Peer-to-Peer stuff.</li>
 
