--- a/content/ipl.html
+++ b/content/ipl.html
@@ -35,7 +35,7 @@
 <p>Ibis was designed to be used in a multi layer system. See the picture of the design below. On top of the system are the applications. These applications can use any of the programming models build on top of Ibis. The Ibis Portability Layer (IPL)  acts as a common interface for the different programming models to the bottom implementation layer. Multiple implementations are available. Some, such as TcpIbis using 100% Java code to ensure portability, and some, such as the MPI based Ibis implementation taking advantage of local high speed networks using native code.</p>
 
 <p>
-<img src="images/ibis-design.png" height="404" width="600" usemap="#designmap" alt="ibis design" >
+<img src="images/ibis-design.png" height="436" width="600" alt="ibis design" >
 </p>
 
 <p>For more in depth information see the following resources:</p>
