--- a/content/news.html
+++ b/content/news.html
@@ -1,7 +1,9 @@
 <p class=newsitem>
 November 2007: Ibis 2.0 is available now! This marks the first version
 of Ibis to change the IPL in four years. For now, only the IPL and TCP
-based imlementations are available.
+based imlementations are available. Also, Ibis is now has support for
+Smartsockets, and is thus able to work in harsh networking environments with Firewalls,
+NATs, etc.
 </p>
 
 <p class=newsitem>
