--- a/content/news.html
+++ b/content/news.html
@@ -4,7 +4,8 @@ Ibis now has support for Smartsockets, and is thus able to work in harsh
 networking environments with Firewalls, NATs, etc.  
 This marks the first version
 of Ibis to change the IPL in four years. For now, only the IPL and TCP
-based imlementations are available. 
+based imlementations are available. For more information and downloads, see the <a
+href="ibis.hml">ibis subproject page</a>.
 </p>
 
 <p class=newsitem>
