--- a/content/news.html
+++ b/content/news.html
@@ -5,7 +5,7 @@ networking environments with Firewalls, NATs, etc.
 This marks the first version
 of Ibis to change the IPL in four years. For now, only the IPL and TCP
 based imlementations are available. For more information and downloads, see the <a
-href="ibis.hml">ibis subproject page</a>.
+href="ipl.hml">ibis subproject page</a>.
 </p>
 
 <p class=newsitem>
