renamed Ibis/IPL menu item

--- a/content/menu.html
+++ b/content/menu.html
@@ -16,7 +16,7 @@
 <a class="button" href="zorilla.html">Zorilla</a>
 
 <p class="projectclass">Communication Libraries</p>
-<a class="button" href="ipl.html">Ibis</a>
+<a class="button" href="ipl.html">Ibis IPL</a>
 <a class="button" href="smartsockets.html">Smartsockets</a> 
 
 <p class="projectclass">Applications</p>
