fiddeling with buttons

--- a/content/smartsockets.html
+++ b/content/smartsockets.html
@@ -1,7 +1,7 @@
 <table ><tr>
 <td ><a href="http://gforge.cs.vu.nl/projects/ibis/">Download Smartsockets</a></td>
-<td ><a class=topmenu href="publications.html#smartsockets">Smartsockets Publications</a></td>
-<td ><a class=topmenu href="talks.html#smartsockets">Smartsockets Talks</a></td>
+<td ><a href="publications.html#smartsockets">Smartsockets Publications</a></td>
+<td ><a href="talks.html#smartsockets">Smartsockets Talks</a></td>
 <td ><script type="text/javascript"> generate_contact_address( "jason", "cs.vu.nl" ); </script></td>
 </tr>
 </table>
