fiddeling with buttons

--- a/content/smartsockets.html
+++ b/content/smartsockets.html
@@ -1,4 +1,4 @@
-<table ><tr>
+<table class=topmenu><tr>
 <td ><a href="http://gforge.cs.vu.nl/projects/ibis/">Download Smartsockets</a></td>
 <td ><a href="publications.html#smartsockets">Smartsockets Publications</a></td>
 <td ><a href="talks.html#smartsockets">Smartsockets Talks</a></td>
