Added user KOALA

--- a/content/users.html
+++ b/content/users.html
@@ -92,3 +92,15 @@
   <p>Sasha Ruppert from the Universität Erlangen-Nürnberg in Erlangen,
   Germany built a Grid-wide file system using Ibis as the communication
   layer. Click <a href="http://www2.cs.fau.de/Lehre/SA-DA/GridFileSystem.xml">here</a> for more information.</p>
+
+  <h3>The KOALA grid scheduler</h3>
+  <p><a href="http://www.st.ewi.tudelft.nl/koala/">KOALA</a> is a grid
+  scheduler that has been designed, implemented, and deployed by the
+  <a href="http://www.pds.ewi.tudelft.nl/">PDS</a> group in Delft on the
+  <a href="http://www.cs.vu.nl/das2">DAS-2</a> multicluster system in the
+  context of the
+  <a href="http://www.vl-e.nl/">Virtual Lab for e-Science (VL-e)</a>
+  research project. The main feature of KOALA is its support for co-allocation,
+  that is, the simultaneous allocation of resources in multiple clusters of
+  the DAS to single applications which consist of multiple components.
+  Ibis has been used for many of the KOALA scheduling experiments.
