--- a/publications.html
+++ b/publications.html
@@ -10,6 +10,7 @@
 <script type="text/javascript" src="generate_address.js">
 </script>
 
+<link rel="shortcut icon" href="http://projects.gforge.cs.vu.nl/ibis/favicon.ico" />
 
 <title>Ibis: Efficient Java-based grid computing</title>
 </head>
