--- a/content/projects.html
+++ b/content/projects.html
@@ -1,6 +1,7 @@
 <hr>
 
 <h2>Grid Computing</h2>
+<p>
 Grid computing promises the integration of high-performance computing
 facilities, large-scale data repositories, and high-end visualization
 devices,  geographically distributed around the globe,
@@ -11,9 +12,9 @@ electrical power by simply "plugging in," without even thinking about where
 the energy is actually produced.
 Likewise, grids promise access to computing cycles and data repositories,
 independent of the actual service providers.
+</p>
 
 <p>
-
 The grid computing group at the VU performs research in the area of
 programming environments, adaptivity to network conditions, and remote
 data visualization for the grid. Our research is tightly integrated into
@@ -22,14 +23,16 @@ many international and national efforts like:
 <li> The <a href="http://www.gridforum.org">Open Grid Forum</a>
 <li> The EU-funded <a href="http://www.xtreemos.org">XtreemOS Project</a>
 <li> The EU-funded <a href="http://www.coregrid.net">CoreGRID Network of Excellence</a>
-<li> The <a href="http://www.cs.vu.nl/das3/">Distributed ASCI Supercomputer
-     (DAS)</a>
+<li> The <a href="http://www.cs.vu.nl/das3/">Distributed ASCI Supercomputer (DAS)</a>
 <li> The VU's own <a href="http://www.cs.vu.nl/ibis/">Ibis</a> project
 </ul>
+</p>
 
+<p>
 Interested in contributing to this exciting field? You are
 warmly welcomed to contact 
 <a href="http://www.cs.vu.nl/~kielmann/">Thilo Kielmann</a>.
+</p>
 
 <hr>
 
@@ -48,15 +51,18 @@ courses:
 <li><a href="http://www.cs.vu.nl/~bal/college04.html">Parallel Programming</a>
 <li><a href="http://www.cs.vu.nl/cs/os-cn/networks-2004.html">Computer Networks</a>
 <li><a href="http://www.cs.vu.nl/obp/education/perfeval/">Performance Analysis of Communication Networks</a>
-<li><a href="http://www.cs.vu.nl/~graphics/">Computer Graphics</a>
 <li><a href="http://www.cs.vu.nl/~kielmann/cgc/">Cluster and Grid Computing</a>
 </ul>
 
-As our work is mostly practically oriented, your programming skills should be
-at least reasonable.
+Depending on the project, other courses, such as
+<a href="http://www.cs.vu.nl/~graphics/">Computer Graphics</a>
+may also be prerequisite.
+As our work is mostly practically oriented, your programming skills should 
+at least be reasonable.
 
 <h3>Open Topics</h3>
 
+<p>
 The following open topics are grouped by projects or topic area.
 The following descriptions merely indicate topics; the exact definition of
 an M.Sc. project needs to be negotiated with the individual student,
@@ -66,6 +72,7 @@ For other types of projects
 size and orientation of a project can be varied.
 If you are interested in doing your thesis with us,
 please contact <a href="http://www.cs.vu.nl/~kielmann/">dr. Thilo Kielmann.</a>
+</p>
 
 
 <h3>Ibis: Efficient Java Based Grid Computing</h3>
