+ Removed obsolete stuff.

--- a/content/projects.html
+++ b/content/projects.html
@@ -55,7 +55,7 @@ courses:
 </ul>
 
 Depending on the project, other courses, such as
-<a href="http://www.cs.vu.nl/~graphics/">Computer Graphics</a>
+<a href="http://www.cs.vu.nl/~graphics/">Computer Graphics</a>,
 may also be prerequisite.
 As our work is mostly practically oriented, your programming skills should 
 at least be reasonable.
@@ -154,28 +154,6 @@ the fast optical network present in both the
 
 
 
-<li><b>KOALA JavaGAT runner</b></li>
-
-<a href="http://www.st.ewi.tudelft.nl/koala/">KOALA</a> 
-is a meta scheduler able to perform co-allocation between
-different resources (such as multiple clusters). Thus, it becomes
-possible to reliably run an application on multiple sites simultaneously
-with only a single command. Currently, KOALA is mostly used on a 
-<a href="http://www.cs.vu.nl/das2">DAS</a>
-system, as it is tied to the middleware running there (SGE). Design and
-Implement a so-called runner for KOALA which is able to run jobs using
-the JavaGAT. This will make it possible to run KOALA on any system
-supported by the JavaGAT.
-
-<li><b>JavaGAT KOALA interface</b></li>
-
-The <a href="http://www.st.ewi.tudelft.nl/koala/">KOALA</a>
-scheduler has a custom interface for job
-scheduling, etc. If a JavaGAT adaptor would be present, any GAT application
-would be able to interface to KOALA. Design and
-implement a JavaGAT adaptor for KOALA such that KOALA can be used as a resource
-broker for the GAT.
-
 <li><b>JavaGAT Grenchmark</b></li>
 
 <a href="http://grenchmark.st.ewi.tudelft.nl/">GrenchMark</a>
@@ -226,49 +204,7 @@ student lab machines will completement this project.
 
 </ul>
 
-<h3>SAGA: The Simple API for Grid Applications</h3>
-
-The SAGA Research Group at 
-<a href="http://www.gridforum.org">OGF</a> 
-strives to define a high level API for developers of Grid Applications. 
-Instead of interfacing directly to Grid Services, the applications can so 
-access basic Grid Capabilities with a simple, consistent and stable API.
-(<a href="http://saga.cct.lsu.edu/">Learn more about SAGA here.</a>)
-Our group is strongly involved in the SAGA developments. Part of these efforts
-are open to students who would like to contribute via a thesis project.
-
 <p>
-For possible topics about SAGA, please contact
-<a href="http://www.cs.vu.nl/~kielmann/">Thilo Kielmann.</a>
-
-<ul>
-
-</ul>
-<p>
-
-
-<ul>
-
-</ul>
-<p>
-
-
-<h3>XtreemOS: Building a Linux-based Operating System
-to Support Virtual Organizations for Next Generation Grids</h3>
-
-The XtreemOS project aims at investigating and proposing new services that 
-should be added to current operating systems to build Grid infrastructure in 
-a simple way. XtreemOS targets the well-accepted open source operating system 
-Linux by extending it to the Grid with native support for virtual 
-organizations and large numbers of neds.
-For possible topics within XtreemOS, please contact
-<a href="http://www.cs.vu.nl/~gpierre/">Guillaume Pierre.</a>
-<p>
-
-<h4>Miscelaneous</h4>
-These are the topics that came to our minds so far (and for which I found the
-time to write up something). Other topics may be agreed upon too.
-<hr>
 
 <h2>Bachelors Theses</h2>
 
